# kebicontrol

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: ipc.rs  main.rs  state.rs  voice.rs
assets/icon/: generate.ps1
config/: config.example.toml
crates/kebi-audio/: Cargo.toml
crates/kebi-audio/src/: capture.rs  lib.rs  vad.rs
crates/kebi-core/: Cargo.toml
crates/kebi-core/src/: app_paths.rs  command.rs  config.rs  error.rs  i18n.rs  lib.rs  profile.rs  secrets.rs
crates/kebi-core/src/actions/: apps.rs  dictation.rs  input.rs  media.rs  mod.rs  system.rs  web.rs  window.rs
crates/kebi-core/src/parser/: llm.rs  local.rs  mod.rs
crates/kebi-llm/: Cargo.toml
crates/kebi-llm/src/: anthropic.rs  client.rs  lib.rs  prompt.rs  providers.rs
crates/kebi-stt/: Cargo.toml
crates/kebi-stt/src/: lib.rs  vosk_engine.rs  wake_word.rs  whisper_api.rs
crates/kebi-tts/: Cargo.toml
crates/kebi-tts/src/: lib.rs
crates/kebi-ui/: Cargo.toml
crates/kebi-ui/src/: app.rs  autostart.rs  hotkeys.rs  i18n.rs  icons.rs  lib.rs  overlay.rs  settings.rs  settings_view.rs  theme.rs  tray.rs  voice.rs
docs/: ARCHITECTURE.md  COMMANDS.md  SETUP.md
scripts/: build-release.ps1
tools/mingw/include/c++/16.1.0/x86_64-w64-mingw32/bits/: c++config.h
tools/mingw/lib/gcc/x86_64-w64-mingw32/16.1.0/include/ssp/: ssp.h
tools/mingw/lib/gcc/x86_64-w64-mingw32/16.1.0/plugin/include/: auto-host.h  configargs.h  insn-codes.h  insn-flags.h  options.h  tm-preds.h  version.h
tools/mingw/share/gdb/: gdbinit
tools/mingw/share/info/: cpp.info  cppinternals.info  gcc.info  gccinstall.info  gccint.info  gfortran.info  libgomp.info  libquadmath.info
tools/mingw/share/man/man1/: addr2line.1  ar.1  as.1  c++filt.1  dlltool.1  elfedit.1  gcc.1  gfortran.1  nm.1  objcopy.1  objdump.1  ranlib.1  readelf.1  size.1  strings.1  strip.1  windmc.1  windres.1
