// KebiControl workspace
// Made by KebiLab

[workspace]
resolver = "2"
members = [
    "crates/kebi-core",
    "crates/kebi-audio",
    "crates/kebi-stt",
    "crates/kebi-llm",
    "crates/kebi-tts",
    "crates/kebi-ui",
    "app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["KebiLab"]
repository = "https://github.com/kebilab/kebicontrol"
description = "KebiControl — minimalist voice control for Windows. Made by KebiLab."

[workspace.dependencies]
# Async
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_with = "3.7"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }

# Time / UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "rolling-file"] }
tracing-appender = "0.2"

# Paths / fs
directories = "5.0"
dirs = "5.0"
walkdir = "2.5"

# CLI / args
clap = { version = "4.5", features = ["derive"] }

# GUI
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
tray-icon = "0.19"
global-hotkey = "0.6"

# Audio
cpal = "0.15"

# System
sysinfo = "0.31"
enigo = "0.2"

# Windows-specific
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
    "Win32_Security_Cryptography",
    "Win32_Graphics_Gdi",
    "Win32_System_Power",
    "Win32_System_Registry",
] }

# Vosk STT (FFI)
vosk = { version = "0.3", default-features = false, features = ["libvosk"] }

# Single instance
single-instance = "0.4"

# Regex / text
regex = "1.10"

# Profile
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
