[package]
name = "kebicontrol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "KebiControl — voice assistant for Windows. Made by KebiLab"

[package.metadata.winres]
# No console window: build as a Windows GUI app.

[[bin]]
name = "kebicontrol"
path = "src/main.rs"

[dependencies]
kebi-core = { path = "../crates/kebi-core" }
kebi-audio = { path = "../crates/kebi-audio" }
kebi-stt = { path = "../crates/kebi-stt" }
kebi-llm = { path = "../crates/kebi-llm" }
kebi-tts = { path = "../crates/kebi-tts" }
kebi-ui = { path = "../crates/kebi-ui" }

eframe = { workspace = true }
egui = { workspace = true }
tray-icon = "0.19"
global-hotkey = { workspace = true }

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
dirs.workspace = true
single-instance = "0.3"
chrono.workspace = true
async-trait.workspace = true
once_cell = "1.19"
parking_lot = "0.12"
