[package]
name = "kebi-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Audio capture and voice activity detection. Made by KebiLab"

[dependencies]
cpal.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot = "0.12"
ringbuf = "0.3"
