[package]
name = "kebi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core domain types and command parsing. Made by KebiLab"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
fuzzy-matcher = "0.3"
once_cell = "1.19"
directories.workspace = true
dirs.workspace = true
base64 = "0.22"
reqwest = { workspace = true }
# Windows-specific
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_Security_Cryptography",
    "Win32_Graphics_Gdi",
] }
enigo = "0.6"
