[package]
name = "kebi-tts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Text-to-speech via Windows SAPI. Made by KebiLab"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
] }
