[package]
name = "kebi-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "UI: tray, overlay, settings. Made by KebiLab"

[dependencies]
egui.workspace = true
eframe.workspace = true
tray-icon.workspace = true
global-hotkey.workspace = true

kebi-core = { path = "../kebi-core" }
kebi-llm = { path = "../kebi-llm" }
kebi-stt = { path = "../kebi-stt" }
kebi-tts = { path = "../kebi-tts" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
directories.workspace = true
dirs.workspace = true

windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
] }
